monitoring/k8s-monitoring-one/alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/scrape: "true"
  labels:
    name: alertmanager
    
  name: alertmanager
  namespace: monitoring
spec:
  ports:
  - name: alertmanager
    port: 9093
    protocol: TCP
    targetPort: 9093
  selector:
    app: alertmanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
      name: alertmanager
    spec:
      containers:
      - args:
        - --config.file=/etc/alertmanager/config.yml
        - --storage.path=/alertmanager
        image: prom/alertmanager:v0.20.0
        name: alertmanager
        ports:
        - containerPort: 9093
          name: alertmanager
        volumeMounts:
        - mountPath: /etc/alertmanager
          name: config-volume
        - mountPath: /alertmanager
          name: alertmanager
      volumes:
      - configMap:
          name: alertmanager
        name: config-volume
      - emptyDir: {}
        name: alertmanager
